--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
     </div>
     <div class="album">
        <div class="lightbox">
+           <img id="view" src="" alt="album image">
        </div>
        <h3>Моя галерея:</h3>
         <div class="row1">
@@ -145,10 +146,10 @@
         <h3>Как со мной связаться:</h3>
         <div class="line"></div>
         <ul>
-            <li><a href="https://www.instagram.com/eva_kovalchuk_offical/">
+            <li><a href="https://www.instagram.com/eva_kovalchuk_offical/" target = "_blank">
             <div class="icon-block">
             <i class="fab fa-instagram"></i>
-            </div></a><a href="https://www.instagram.com/eva_kovalchuk_offical/">
+            </div></a><a href="https://www.instagram.com/eva_kovalchuk_offical/" target = "_blank">
             eva_kovalchuk_offical</a>
             </li>
             <li>
@@ -164,13 +165,13 @@
         <div class="line"></div>
         <h3>Дизайн сайта:</h3>
         <ul>
-            <li><a href="https://vk.com/soniacooper"><div class="icon-block"><i class="fab fa-vk"></i></div></a><a href="https://vk.com/soniacooper">vk.com/soniacooper</a></li>
-            <li><a href="https://www.instagram.com/k.elizabet.v/"><div class="icon-block"><i class="fab fa-instagram"></i></div></a><a href="https://www.instagram.com/k.elizabet.v/">k.elizabet.v</a></li>
+            <li><a href="https://vk.com/soniacooper" target = "_blank"><div class="icon-block"><i class="fab fa-vk"></i></div></a><a href="https://vk.com/soniacooper" target = "_blank">vk.com/soniacooper</a></li>
+            <li><a href="https://www.instagram.com/k.elizabet.v/" target = "_blank"><div class="icon-block"><i class="fab fa-instagram"></i></div></a><a href="https://www.instagram.com/k.elizabet.v/" target = "_blank">k.elizabet.v</a></li>
         </ul>
         
         <h3>Вёрстка сайта:</h3>
         <ul>
-            <li><a href="https://vk.com/tonycoopers"><div class="icon-block"><i class="fab fa-vk"></i></div></a><a href="https://vk.com/tonycoopers">vk.com/tonycoopers</a></li>
+            <li><a href="https://vk.com/tonycoopers" target = "_blank"><div class="icon-block"><i class="fab fa-vk"></i></div></a><a href="https://vk.com/tonycoopers" target = "_blank">vk.com/tonycoopers</a></li>
         </ul>
         
         <p>31 марта 2020 года</p>
